autotests/syntax-tests/tests/positive/positive0.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = Name Name ; } Name { } ; $EXTERN Name , Name ; $ENUM Name , Name ; $EENUM Name , Name ; $SWAP Name , Name ; $ESWAP Name , Name ; $FORWARD Name , Name ; $LABEL Name , Name ; $ENTRY Name { } 