autotests/syntax-tests/tests/negative/negative149.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var Name # Name 'chars' 123 ) Name ; , : { } :
, : = : = ; = ; } Name : { } : , : = : = ; = ; } ; 